--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.9",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^1.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
